--- a/app-gateway/FbSettings/CMakeLists.txt
+++ b/app-gateway/FbSettings/CMakeLists.txt
@@ -15,59 +15,102 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-set(PLUGIN_NAME FbSettings)
-set(MODULE_NAME ${NAMESPACE}${PLUGIN_NAME})
+# If not stated otherwise in this file or this component's license file the
+# following copyright...
+#
+# CMake configuration for FbSettings plugin aligned with AppGateway style.
 
+cmake_minimum_required(VERSION 3.10)
+
+# Thunder typically defines the NAMESPACE cache variable as WPEFramework.
+if (NOT DEFINED NAMESPACE OR "${NAMESPACE}" STREQUAL "")
+    set(NAMESPACE WPEFramework)
+endif()
+
+set(PLUGIN_NAME FbSettings)
+set(TARGET ${NAMESPACE}${PLUGIN_NAME})
+
+# Version macros for plugin metadata
 set(VERSION_MAJOR 1)
 set(VERSION_MINOR 0)
 set(VERSION_PATCH 0)
-
 add_compile_definitions(FBSETTINGS_MAJOR_VERSION=${VERSION_MAJOR})
 add_compile_definitions(FBSETTINGS_MINOR_VERSION=${VERSION_MINOR})
 add_compile_definitions(FBSETTINGS_PATCH_VERSION=${VERSION_PATCH})
 
-set(MODULE_VERSION ${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH})
+# Resolve Thunder (WPEFramework) SDK paths, prefer values propagated from the top-level
+# If not provided, fallback to repo-relative path: <repo-root>/app-gateway2/dependencies/install
+if (DEFINED THUNDER_INSTALL_PATH_ABS)
+    set(_THUNDER_SDK_ROOT "${THUNDER_INSTALL_PATH_ABS}")
+elseif (DEFINED THUNDER_INSTALL_PATH)
+    get_filename_component(_THUNDER_SDK_ROOT "${THUNDER_INSTALL_PATH}" REALPATH)
+else()
+    get_filename_component(_THUNDER_SDK_ROOT "${CMAKE_SOURCE_DIR}/../dependencies/install" REALPATH)
+endif()
+set(THUNDER_INCLUDE_DIR "${_THUNDER_SDK_ROOT}/include/${NAMESPACE}")
+set(THUNDER_LIBRARY_DIR "${_THUNDER_SDK_ROOT}/lib")
 
-set(PLUGIN_FBSETTINGS_STARTUPORDER "" CACHE STRING "To configure startup order of FbSettings plugin")
-set(PLUGIN_FBSETTINGS_AUTOSTART "false" CACHE STRING "Automatically start FbSettings plugin")
+# Build plugin shared library
+add_library(${TARGET} SHARED
+    Module.cpp
+    FbSettings.cpp
+    FbSettingsImplementation.cpp
+    delegate/SystemDelegate.cpp
+)
 
-message("Setup ${MODULE_NAME} v${MODULE_VERSION}")
+# Include directories: Thunder SDK, plugin dir, helpers, Supporting_Files and local interfaces
+target_include_directories(${TARGET}
+    PUBLIC
+        "${THUNDER_INCLUDE_DIR}"
+    PRIVATE
+        "${CMAKE_CURRENT_LIST_DIR}"
+        "${CMAKE_CURRENT_LIST_DIR}/delegate"
+        "${CMAKE_CURRENT_LIST_DIR}/interfaces"
+        "${CMAKE_CURRENT_LIST_DIR}/interfaces/json"
+        "${CMAKE_CURRENT_LIST_DIR}/../helpers"
+        "${CMAKE_SOURCE_DIR}/../Supporting_Files"
+        "${CMAKE_SOURCE_DIR}"           # for UtilsLogging.h in parent app-gateway
+)
 
-find_package(${NAMESPACE}Plugins REQUIRED)
-find_package(${NAMESPACE}Definitions REQUIRED)
-find_package(CompileSettingsDebug CONFIG REQUIRED)
+# Use C++11
+target_compile_features(${TARGET} PRIVATE cxx_std_11)
 
-add_library(${MODULE_NAME} SHARED
-        FbSettingsImplementation.cpp
-        FbSettings.cpp
-        Module.cpp
-        delegate/SystemDelegate.cpp)
+# Define MODULE_NAME to enable proper Thunder tracing category setup for this binary
+target_compile_definitions(${TARGET} PRIVATE NAMESPACE=${NAMESPACE} MODULE_NAME=Plugin_${PLUGIN_NAME})
 
-# Add include paths for shared helper headers and parent directory (for UtilsLogging.h etc.)
-target_include_directories(${MODULE_NAME}
-        PRIVATE
-        ../helpers
-        ..
-        ${CMAKE_SOURCE_DIR}/../Supporting_Files)
+# Link against Thunder libs by resolving full paths explicitly
+find_library(THUNDER_CORE_LIB NAMES WPEFrameworkCore HINTS "${THUNDER_LIBRARY_DIR}" NO_DEFAULT_PATH)
+find_library(THUNDER_PLUGINS_LIB NAMES WPEFrameworkPlugins HINTS "${THUNDER_LIBRARY_DIR}" NO_DEFAULT_PATH)
+find_library(THUNDER_DEFINITIONS_LIB NAMES WPEFrameworkDefinitions HINTS "${THUNDER_LIBRARY_DIR}" NO_DEFAULT_PATH)
 
-set_target_properties(${MODULE_NAME} PROPERTIES
+if (NOT THUNDER_CORE_LIB OR NOT THUNDER_PLUGINS_LIB)
+    message(FATAL_ERROR "WPEFramework libraries not found in ${THUNDER_LIBRARY_DIR}. Please ensure dependencies are installed.")
+endif()
+
+target_link_libraries(${TARGET}
+    PRIVATE
+        ${THUNDER_CORE_LIB}
+        ${THUNDER_PLUGINS_LIB}
+        ${THUNDER_DEFINITIONS_LIB}
+)
+
+set_target_properties(${TARGET}
+    PROPERTIES
         CXX_STANDARD 11
-        CXX_STANDARD_REQUIRED YES)
+        CXX_STANDARD_REQUIRED YES
+        FRAMEWORK FALSE
+        OUTPUT_NAME "${PLUGIN_NAME}"
+)
 
-target_compile_definitions(${MODULE_NAME} PRIVATE MODULE_NAME=Plugin_${PLUGIN_NAME})
+# Installation paths (conventional Thunder layout)
+string(TOLOWER ${NAMESPACE} NAMESPACE_LIB)
 
-target_link_libraries(${MODULE_NAME}
-        PRIVATE
-        CompileSettingsDebug::CompileSettingsDebug
-        ${NAMESPACE}Plugins::${NAMESPACE}Plugins
-        ${NAMESPACE}Definitions::${NAMESPACE}Definitions)
+install(TARGETS ${TARGET}
+    LIBRARY DESTINATION lib/${NAMESPACE_LIB}/plugins COMPONENT libs
+)
 
-# To error any missing links
-target_link_options(${MODULE_NAME} PRIVATE -Wl,-z,defs)
-# To error any warnings
-add_compile_options(-Wall -Werror)
-
-install(TARGETS ${MODULE_NAME}
-        DESTINATION lib/${STORAGE_DIRECTORY}/plugins)
-
-write_config(${PLUGIN_NAME})
+install(FILES
+    FbSettings.conf.in
+    FbSettings.config
+    DESTINATION etc/${NAMESPACE_LIB}/plugins
+)
