--- a/app-gateway/AppGateway/AppGateway.config
+++ b/app-gateway/AppGateway/AppGateway.config
@@ -1,7 +1,7 @@
-{
-  "serverPort": 3473,
-  "permissionEnforcement": true,
-  "jwtEnabled": false,
-  "gatewayCallsign": "org.rdk.AppGateway",
-  "resolutionPaths": []
-}
+set (autostart ${PLUGIN_APPGATEWAY_AUTOSTART})
+set (preconditions Platform)
+set (callsign "org.rdk.AppGateway")
+
+if(PLUGIN_APPGATEWAY_STARTUPORDER)
+set (startuporder ${PLUGIN_APPGATEWAY_STARTUPORDER})
+endif()
